# diplom_qa_guru

./: .gitignore  README.md  config.py  pyproject.toml  pytest.ini
diplom_qa_guru/pages/api/: token.py
diplom_qa_guru/pages/web/: basket_page.py
diplom_qa_guru/utils/: attach.py  file.py  request_helper.py
kazanexpress_project/pages/mobile/: skip_promo_widget_page.py
kazanexpress_project/pages/web/: basket_page.py  city_page.py  login_page.py
kazanexpress_project/utils/: file.py  request_helper.py
schemas/: get_cities.py  get_product.py
tests/: conftest.py  test_add_to_basket.py  test_add_to_favorites.py  test_delete_from_basket.py  test_delete_from_favorites.py  test_login_button.py  test_login_negative.py  test_search_positive.py  test_set_city.py
tests/api/: test_get_city.py  test_get_product.py  test_post_add_to_favorites.py  test_post_remove_favorites.py  test_post_user_contacts.py
tests/mobile/: conftest.py  test_add_to_basket.py  test_add_to_favorites.py  test_catalog.py  test_delete_from_basket.py  test_delete_from_favorites.py
tests/web/: conftest.py  test_add_to_basket.py  test_add_to_favorites.py  test_delete_from_basket.py  test_delete_from_favorites.py  test_login_button.py  test_login_negative.py  test_search_positive.py  test_set_city.py
tests_kazanexpress/pages/api/: token.py
tests_kazanexpress/pages/web/: basket_page.py
tests_kazanexpress/utils/: file.py  request_helper.py
